# bazos-scraper

./: .gitignore  README.md  bazos.json  pyproject.toml  scrapy.cfg
bazos/: items.py  middlewares.py  pipelines.py  settings.py
bazos/spiders/: bazos.py
