[tool.poetry]
name = "bazos-scraper"
version = "0.1.0"
description = ""
authors = ["Raiper34 <raipergm34@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
taskipy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
scrapy = "scrapy"
crawl = "scrapy crawl bazos"
crawl_json = "scrapy crawl bazos -O bazos.json"
